server/src/utils/antlr4ng/MapIniParser.ts
// Generated from ./server/src/utils/antlr4ng/MapIni.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { MapIniListener } from "./MapIniListener.js";
import { MapIniVisitor } from "./MapIniVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class MapIniParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly CONDITIONSTATE = 4;
    public static readonly ADDMODULE = 5;
    public static readonly REMOVEMODULE = 6;
    public static readonly EQ = 7;
    public static readonly STRING = 8;
    public static readonly ID = 9;
    public static readonly NEWLINE = 10;
    public static readonly WS = 11;
    public static readonly COMMENT = 12;
    public static readonly RULE_program = 0;
    public static readonly RULE_class = 1;
    public static readonly RULE_simpleClass = 2;
    public static readonly RULE_complexClass = 3;
    public static readonly RULE_class_identifier = 4;
    public static readonly RULE_class_value = 5;
    public static readonly RULE_module_modifier = 6;
    public static readonly RULE_addModule = 7;
    public static readonly RULE_removeModule = 8;
    public static readonly RULE_objectModules = 9;
    public static readonly RULE_module_type = 10;
    public static readonly RULE_module_name = 11;
    public static readonly RULE_moduleTag_value = 12;
    public static readonly RULE_salvage_value = 13;
    public static readonly RULE_propertyBlock = 14;
    public static readonly RULE_conditionBlock = 15;
    public static readonly RULE_property = 16;
    public static readonly RULE_property_values = 17;
    public static readonly RULE_value = 18;
    public static readonly RULE_end = 19;

    public static readonly literalNames = [
        null, "'end'", "'End'", "'END'", null, null, null, "'='"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, "CONDITIONSTATE", "ADDMODULE", "REMOVEMODULE", 
        "EQ", "STRING", "ID", "NEWLINE", "WS", "COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "class", "simpleClass", "complexClass", "class_identifier", 
        "class_value", "module_modifier", "addModule", "removeModule", "objectModules", 
        "module_type", "module_name", "moduleTag_value", "salvage_value", 
        "propertyBlock", "conditionBlock", "property", "property_values", 
        "value", "end",
    ];

    public get grammarFileName(): string { return "MapIni.g4"; }
    public get literalNames(): (string | null)[] { return MapIniParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return MapIniParser.symbolicNames; }
    public get ruleNames(): string[] { return MapIniParser.ruleNames; }
    public get serializedATN(): number[] { return MapIniParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, MapIniParser._ATN, MapIniParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, MapIniParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 44;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 9 || _la === 10) {
                {
                this.state = 42;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case MapIniParser.ID:
                    {
                    this.state = 40;
                    this.class_();
                    }
                    break;
                case MapIniParser.NEWLINE:
                    {
                    this.state = 41;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 46;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 47;
            this.match(MapIniParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public class_(): ClassContext {
        let localContext = new ClassContext(this.context, this.state);
        this.enterRule(localContext, 2, MapIniParser.RULE_class);
        try {
            this.state = 51;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 49;
                this.simpleClass();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 50;
                this.complexClass();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public simpleClass(): SimpleClassContext {
        let localContext = new SimpleClassContext(this.context, this.state);
        this.enterRule(localContext, 4, MapIniParser.RULE_simpleClass);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 53;
            this.class_identifier();
            this.state = 54;
            this.class_value();
            this.state = 55;
            this.match(MapIniParser.NEWLINE);
            this.state = 60;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0)) {
                {
                this.state = 58;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case MapIniParser.STRING:
                case MapIniParser.ID:
                    {
                    this.state = 56;
                    this.property();
                    }
                    break;
                case MapIniParser.NEWLINE:
                    {
                    this.state = 57;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 62;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 63;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public complexClass(): ComplexClassContext {
        let localContext = new ComplexClassContext(this.context, this.state);
        this.enterRule(localContext, 6, MapIniParser.RULE_complexClass);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 65;
            this.class_identifier();
            this.state = 69;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 9) {
                {
                {
                this.state = 66;
                this.class_value();
                }
                }
                this.state = 71;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 72;
            this.match(MapIniParser.NEWLINE);
            this.state = 80;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1888) !== 0)) {
                {
                this.state = 78;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
                case 1:
                    {
                    this.state = 73;
                    this.module_modifier();
                    }
                    break;
                case 2:
                    {
                    this.state = 74;
                    this.objectModules();
                    }
                    break;
                case 3:
                    {
                    this.state = 75;
                    this.propertyBlock();
                    }
                    break;
                case 4:
                    {
                    this.state = 76;
                    this.property();
                    }
                    break;
                case 5:
                    {
                    this.state = 77;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                }
                }
                this.state = 82;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 83;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public class_identifier(): Class_identifierContext {
        let localContext = new Class_identifierContext(this.context, this.state);
        this.enterRule(localContext, 8, MapIniParser.RULE_class_identifier);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 85;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public class_value(): Class_valueContext {
        let localContext = new Class_valueContext(this.context, this.state);
        this.enterRule(localContext, 10, MapIniParser.RULE_class_value);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 87;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public module_modifier(): Module_modifierContext {
        let localContext = new Module_modifierContext(this.context, this.state);
        this.enterRule(localContext, 12, MapIniParser.RULE_module_modifier);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 91;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case MapIniParser.ADDMODULE:
                {
                this.state = 89;
                this.addModule();
                }
                break;
            case MapIniParser.REMOVEMODULE:
                {
                this.state = 90;
                this.removeModule();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public addModule(): AddModuleContext {
        let localContext = new AddModuleContext(this.context, this.state);
        this.enterRule(localContext, 14, MapIniParser.RULE_addModule);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 93;
            this.match(MapIniParser.ADDMODULE);
            this.state = 94;
            this.match(MapIniParser.NEWLINE);
            this.state = 100;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0)) {
                {
                this.state = 98;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
                case 1:
                    {
                    this.state = 95;
                    this.objectModules();
                    }
                    break;
                case 2:
                    {
                    this.state = 96;
                    this.property();
                    }
                    break;
                case 3:
                    {
                    this.state = 97;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                }
                }
                this.state = 102;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 103;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public removeModule(): RemoveModuleContext {
        let localContext = new RemoveModuleContext(this.context, this.state);
        this.enterRule(localContext, 16, MapIniParser.RULE_removeModule);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 105;
            this.match(MapIniParser.REMOVEMODULE);
            this.state = 106;
            this.moduleTag_value();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public objectModules(): ObjectModulesContext {
        let localContext = new ObjectModulesContext(this.context, this.state);
        this.enterRule(localContext, 18, MapIniParser.RULE_objectModules);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 108;
            this.module_type();
            this.state = 109;
            this.match(MapIniParser.EQ);
            this.state = 110;
            this.module_name();
            this.state = 111;
            this.moduleTag_value();
            this.state = 113;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 112;
                this.salvage_value();
                }
            }

            this.state = 115;
            this.match(MapIniParser.NEWLINE);
            this.state = 122;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1808) !== 0)) {
                {
                this.state = 120;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 12, this.context) ) {
                case 1:
                    {
                    this.state = 116;
                    this.property();
                    }
                    break;
                case 2:
                    {
                    this.state = 117;
                    this.propertyBlock();
                    }
                    break;
                case 3:
                    {
                    this.state = 118;
                    this.conditionBlock();
                    }
                    break;
                case 4:
                    {
                    this.state = 119;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                }
                }
                this.state = 124;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 125;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public module_type(): Module_typeContext {
        let localContext = new Module_typeContext(this.context, this.state);
        this.enterRule(localContext, 20, MapIniParser.RULE_module_type);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 127;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public module_name(): Module_nameContext {
        let localContext = new Module_nameContext(this.context, this.state);
        this.enterRule(localContext, 22, MapIniParser.RULE_module_name);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 129;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public moduleTag_value(): ModuleTag_valueContext {
        let localContext = new ModuleTag_valueContext(this.context, this.state);
        this.enterRule(localContext, 24, MapIniParser.RULE_moduleTag_value);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 131;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public salvage_value(): Salvage_valueContext {
        let localContext = new Salvage_valueContext(this.context, this.state);
        this.enterRule(localContext, 26, MapIniParser.RULE_salvage_value);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 133;
            this.match(MapIniParser.ID);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public propertyBlock(): PropertyBlockContext {
        let localContext = new PropertyBlockContext(this.context, this.state);
        this.enterRule(localContext, 28, MapIniParser.RULE_propertyBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 135;
            this.match(MapIniParser.ID);
            this.state = 137;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 136;
                this.match(MapIniParser.ID);
                }
            }

            this.state = 139;
            this.match(MapIniParser.NEWLINE);
            this.state = 145;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0)) {
                {
                this.state = 143;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 15, this.context) ) {
                case 1:
                    {
                    this.state = 140;
                    this.property();
                    }
                    break;
                case 2:
                    {
                    this.state = 141;
                    this.propertyBlock();
                    }
                    break;
                case 3:
                    {
                    this.state = 142;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                }
                }
                this.state = 147;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 148;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditionBlock(): ConditionBlockContext {
        let localContext = new ConditionBlockContext(this.context, this.state);
        this.enterRule(localContext, 30, MapIniParser.RULE_conditionBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 150;
            this.match(MapIniParser.CONDITIONSTATE);
            this.state = 151;
            this.match(MapIniParser.EQ);
            this.state = 152;
            this.property_values();
            this.state = 153;
            this.match(MapIniParser.NEWLINE);
            this.state = 158;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0)) {
                {
                this.state = 156;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case MapIniParser.STRING:
                case MapIniParser.ID:
                    {
                    this.state = 154;
                    this.property();
                    }
                    break;
                case MapIniParser.NEWLINE:
                    {
                    this.state = 155;
                    this.match(MapIniParser.NEWLINE);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 160;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 161;
            this.end();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public property(): PropertyContext {
        let localContext = new PropertyContext(this.context, this.state);
        this.enterRule(localContext, 32, MapIniParser.RULE_property);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 163;
            this.value();
            this.state = 164;
            this.match(MapIniParser.EQ);
            this.state = 165;
            this.property_values();
            this.state = 166;
            this.match(MapIniParser.NEWLINE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public property_values(): Property_valuesContext {
        let localContext = new Property_valuesContext(this.context, this.state);
        this.enterRule(localContext, 34, MapIniParser.RULE_property_values);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 169;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 168;
                this.value();
                }
                }
                this.state = 171;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 8 || _la === 9);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public value(): ValueContext {
        let localContext = new ValueContext(this.context, this.state);
        this.enterRule(localContext, 36, MapIniParser.RULE_value);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 173;
            _la = this.tokenStream.LA(1);
            if(!(_la === 8 || _la === 9)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public end(): EndContext {
        let localContext = new EndContext(this.context, this.state);
        this.enterRule(localContext, 38, MapIniParser.RULE_end);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 175;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 14) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!MapIniParser.__ATN) {
            MapIniParser.__ATN = new antlr.ATNDeserializer().deserialize(MapIniParser._serializedATN);
        }

        return MapIniParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(MapIniParser.literalNames, MapIniParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return MapIniParser.vocabulary;
    }

    private static readonly decisionsToDFA = MapIniParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(MapIniParser.EOF, 0)!;
    }
    public class_(): ClassContext[];
    public class_(i: number): ClassContext | null;
    public class_(i?: number): ClassContext[] | ClassContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ClassContext);
        }

        return this.getRuleContext(i, ClassContext);
    }
    public NEWLINE(): antlr.TerminalNode[];
    public NEWLINE(i: number): antlr.TerminalNode | null;
    public NEWLINE(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MapIniParser.NEWLINE);
    	} else {
    		return this.getToken(MapIniParser.NEWLINE, i);
    	}
    }
    public override get ruleIndex(): number {
        return MapIniParser.RULE_program;
    }
    public override enterRule(listener: MapIniListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: MapIniListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: MapIniVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ClassContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public simpleClass(): SimpleClassContext | null {
        return this.getRuleContext(0, SimpleClassContext);
    }
    public complexClass(): ComplexClassContext | null {
        return this.getRuleContext(0, ComplexClassContext);
    }
    public override get ruleIndex(): number {
        return MapIniParser.RULE_class;
    }
    public override enterRule(listener: MapIniListener): void {
        if(listener.enterClass) {
             listener.enterClass(this);
        }
    }
    public override exitRule(listener: MapIniListener): void {
        if(listener.exitClass) {
             listener.exitClass(this);
        }
    }
    public override accept<Result>(visitor: MapIniVisitor<Result>): Result | null {
        if (visitor.visitClass) {
            return visitor.visitClass(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class SimpleClassContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public class_identifier(): Class_identifierContext {
        return this.getRuleContext(0, Class_identifierContext)!;
    }
    public class_value(): Class_valueContext {
        return this.getRuleContext(0, Class_valueContext)!;
    }
    public NEWLINE(): antlr.TerminalNode[];
    public NEWLINE(i: number): antlr.TerminalNode | null;
    public NEWLINE(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MapIniParser.NEWLINE);
    	} else {
    		return this.getToken(MapIniParser.NEWLINE, i);
    	}
    }
    public end(): EndContext {
        return this.getRuleContext(0, EndContext)!;
    }
    public property(): PropertyContext[];
    public property(i: number): PropertyContext | null;
    public property(i?: number): PropertyContext[] | PropertyContext | null {
        if (i === undefined) {
            return this.getRuleContexts(PropertyContext);
        }

        return this.getRuleContext(i, PropertyContext);
    }
    public override get ruleIndex(): number {
        return MapIniParser.RULE_simpleClass;
    }
    public override enterRule(listener: MapIniListener): void {
        if(listener.enterSimpleClass) {
             listener.enterSimpleClass(this);
        }
    }
    public override exitRule(listener: MapIniListener): void {
        if(listener.exitSimpleClass) {
             listener.exitSimpleClass(this);
        }
    }
    public override accept<Result>(visitor: MapIniVisitor<Result>): Result | null {
        if (visitor.visitSimpleClass) {
            return visitor.visitSimpleClass(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ComplexClassContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public class_identifier(): Class_identifierContext {
        return this.getRuleContext(0, Class_identifierContext)!;
    }
    public NEWLINE(): antlr.TerminalNode[];
    public NEWLINE(i: number): antlr.TerminalNode | null;
    public NEWLINE(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(MapIniParser.NEWLINE);
    	} else {
    		return this.getToken(MapIniParser.NEWLINE, i);
    	}
    }
    public end(): EndContext {
        return this.getRuleContext(0, EndContext)!;
    }
    public class_value(): Class_valueContext[];
    public class_value(i: number): Class_valueContext | null;
    public class_value(i?: number): Class_valueContext[] | Class_valueContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Class_valueContext);
        }

        return this.getRuleContext(i, Class_valueContext);
    }
    public module_modifier(): Module_modifierContext[];
    public module_modifier(i: number): Module_modifierContext | null;
    public module_modifier(i?: number): Module_modifierContext[] | Module_modifierContext | null {
        if (i === undefined) {
            return this.getRuleContexts(Module_modifierContext);
        }

        return this.getRuleContext(i, Module_modifierContext);
    }
    public objectModules(): ObjectModulesContext[];
    public objectModules(i: number): ObjectModulesContext | null;
    public objectModules(i?: number): ObjectModulesContext[] | ObjectModulesContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ObjectModulesContext);
        }

        return this.getRuleContext(i, ObjectModulesContext);
    }
    public propertyBlock(): PropertyBlockContext[];
    public propertyBlock(i: number): PropertyBlockContext | null;
    public propertyBlock(i?: number): PropertyBlockContext[] | PropertyBlockContext | null {
        if (i === undefined) {
            return this.getRuleContexts(PropertyBlockContext);
        }

        return this.getRuleContext(i, PropertyBlockContext);
    }
    public property(): PropertyContext[];
    public property(i: number): PropertyContext | null;
    public property(i?: number): PropertyContext[] | PropertyContext | null {
        if (i === undefined) {
            return this.getRuleContexts(PropertyContext);
        }

        return this.getRuleContext(i, PropertyContext);
    }
    public override get ruleIndex(): number {
        return MapIniParser.RULE_complexClass;
    }
    public override enterRule(listener: MapIniListener): void {
        if(listener.enterComplexClass) {
             listener.enterComplexClass(this);
        }
    }
    public override exitRule(listener: MapIniListener): void {
        if(listener.exitComplexClass) {
             listener.exitComplexClass(this);
        }
    }
    public override accept<Result>(visitor: MapIniVisitor<Result>): Result | null {
        if (visitor.visitComplexClass) {
            return visitor.visitComplexClass(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Class_identifierContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ID(): antlr.TerminalNode {
        return this.getToken(MapIniParser.ID, 0)!;
    }
    public override get ruleIndex(): number {
        return MapIniParser.RULE_class_identifier;
    }
    public override enterRule(listener: MapIniListener): void {
        if(listener.enterClass_identifier) {
             listener.enterClass_identifier(this);
        }
    }
    public override exitRule(listener: MapIniListener): void {
        if(listener.exitClass_identifier) {
             listener.exitClass_identifier(this);
        }
    }
    public override accept<Result>(visitor: MapIniVisitor<Result>): Result | null {
        if (visitor.visitClass_identifier) {
            return visitor.visitClass_identifier(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}

